force-app/main/default/objects/Case_Component__c/Case_Component__c.object-meta.xml
<CustomObject>
    <description>Used in conjunction with the Case object, this is initially used to track the products being returned from the 2013Nov recall campaign</description>
    <label>Case Component</label>
    <nameField>
        <displayFormat>CCN-{0000000}</displayFormat>
        <label>Case Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>