force-app/main/default/objects/Case_Component__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Specify whether or not the product being returned is New or Worn.</description>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Worn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>