force-app/main/default/objects/Case_Component__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>Size of Shoe</description>
    <label>Size</label>
    <length>4</length>
    <type>Text</type>
</CustomField>