force-app/main/default/objects/Case_Component__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <description>Style SKU</description>
    <label>Style</label>
    <length>20</length>
    <type>Text</type>
</CustomField>