force-app/main/default/objects/Case_Component__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Width of shoe</description>
    <label>Width</label>
    <length>3</length>
    <type>Text</type>
</CustomField>